k8s/grafana/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  revisionHistoryLimit: 1
  template:
    spec:
      containers:
      - env:
        - name: GF_ANALYTICS_REPORTING_ENABLED
          value: "false"
        - name: GF_ANALYTICS_CHECK_FOR_UPDATES
          value: "false"
        - name: GF_AUTH_ANONYMOUS_ENABLED
          value: "false"
        - name: GF_AUTH_BASIC_ENABLED
          value: "true"
        - name: GF_AUTH_DISABLE_LOGIN_FORM
          value: "false"
        - name: GF_INSTALL_PLUGINS
          value: "grafana-clock-panel,natel-discrete-panel,grafana-piechart-panel"
        - name: GF_LOG_MODE
          value: console
        - name: GF_SECURITY_ADMIN_USER
          valueFrom:
            secretKeyRef:
              key: username
              name: grafana-admin
        - name: GF_SECURITY_ADMIN_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: grafana-admin
        - name: GF_PATHS_DATA
          value: /var/lib/grafana
        - name: GF_PATHS_PROVISIONING
          value: /etc/grafana/provisioning
        image: grafana
        name: grafana
        ports:
        - containerPort: 3000
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /robots.txt
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 2
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 3000
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 350m
            memory: 400Mi
          requests:
            cpu: 250m
            memory: 200Mi
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-pv
        - mountPath: /etc/grafana/provisioning/datasources
          name: grafana-provisioning-datasources
        - mountPath: /etc/grafana/provisioning/dashboards
          name: grafana-provisioning-providers
        - mountPath: /grafana-provisioning-dashboards
          name: grafana-provisioning-dashboards
      - env:
        - name: LABEL
          value: grafana-provisioning
        - name: LABEL_VALUE
          value: dashboard
        - name: FOLDER
          value: /grafana-provisioning-dashboards
        - name: FOLDER_ANNOTATION
          value: grafana-provisioning-directory
        - name: NAMESPACE
          value: grafana
        - name: RESOURCE
          value: configmap
        - name: METHOD
          value: null
        - name: REQ_URL
          value: http://localhost:3000/api/admin/provisioning/dashboards/reload
        - name: REQ_METHOD
          value: POST
        - name: REQ_RETRY_TOTAL
          value: "9999"
        - name: REQ_RETRY_BACKOFF_FACTOR
          value: "1"
        - name: REQ_TIMEOUT
          value: "30"
        - name: REQ_USERNAME
          valueFrom:
            secretKeyRef:
              key: username
              name: grafana-admin
        - name: REQ_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: grafana-admin
        image: k8s-sidecar
        name: config-sidecar
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - mountPath: /grafana-provisioning-dashboards
          name: grafana-provisioning-dashboards
      securityContext:
        fsGroup: 472
        runAsUser: 472
        runAsGroup: 472
      serviceAccountName: grafana
      volumes:
      - name: grafana-pv
        persistentVolumeClaim:
          claimName: grafana-pvc
      - configMap:
          name: grafana-provisioning-datasources
        name: grafana-provisioning-datasources
      - configMap:
          name: grafana-provisioning-providers
        name: grafana-provisioning-providers
      - emptyDir: {}
        name: grafana-provisioning-dashboards
